# penumbra

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  actions.yaml
.github/workflows/: actions.yaml  build-and-test.yml
cmake/: compiler-flags.cmake
examples/: CMakeLists.txt  awning.cpp  fakestate.cpp  fakestate.h
include/penumbra/: context.h  logging.h  penumbra.h  sun.h  surface.h
src/: CMakeLists.txt  context.cpp  error.cpp  error.h  penumbra-implementation.cpp  penumbra-implementation.h  penumbra-private.h  penumbra.cpp  sun.cpp  sun.h  surface-implementation.cpp  surface-implementation.h  surface-private.h  surface.cpp
src/gl/: context.cpp  context.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h
test/: CMakeLists.txt  penumbra_test.cpp
